[package]
name = "fde"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.2"
rand = { version = "0.8", features = ["std", "std_rng"] }
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = ["r1cs", "snark", "sponge", "crh"] }
criterion = "0.5.1"
ark-bls12-381 = "^0.4.0"
itertools = "0.12.1"
rayon = "1.10.0"
ark-bn254 = "0.4.0"
ark-vesta = "0.4.0"

[[bench]]
harness = false
name = "bench_fde"
